syntax="proto3";
package employee;

message EmployeeRequest{
  int32 id=1;
}